--- a/consultoria.html
+++ b/consultoria.html
@@ -1102,7 +1102,7 @@
             </svg>
           </div>
 
-          <a class="btn primary" href="https://api.whatsapp.com/send/?phone=%2B525578634127&text&type=phone_number&app_absent=0" target="_blank" rel="noopener">
+          <a class="btn primary" href="https://wa.link/4wxidx" target="_blank" rel="noopener">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
               <path d="M6.5 3.5 9 6c.5.5.6 1.2.2 1.8L8 9.5c1.1 2.2 2.9 4 5.1 5.1l1.7-1.2c.6-.4 1.3-.3 1.8.2l2.5 2.5c.6.6.6 1.6 0 2.2l-1.4 1.4c-.6.6-1.4.9-2.3.8-9.1-1.1-16-8-17.1-17.1-.1-.9.2-1.7.8-2.3L4.3 3.5c.6-.6 1.6-.6 2.2 0Z" stroke="rgba(251,251,251,.88)" stroke-width="2" stroke-linejoin="round"/>
             </svg>
@@ -1134,79 +1134,14 @@
     <div class="wrap">
       <div class="hero-inner">
         <div>
-          <div class="kicker">
-            <span class="dot" aria-hidden="true"></span>
-            ESTRATEGIA REAL, EJECUCIÓN FINA
-          </div>
-
           <h1>CONSULTORÍA</h1>
 
           <p class="sub">
-            Consultoría técnica especializada para fortalecer políticas, protocolos, cultura organizacional e impacto social, con enfoque de derechos humanos, igualdad e inclusión. Cada proceso se diseña de manera confidencial, contextualizada y basada en evidencia, priorizando soluciones claras, viables y sostenibles para la organización.
+            Consultoría técnica especializada para fortalecer políticas, protocolos, cultura organizacional e impacto social, con enfoque de derechos humanos, igualdad e inclusión.
           </p>
-
-          <div class="hero-actions">
-            <a class="btn primary" href="https://api.whatsapp.com/send/?phone=%2B525578634127&text&type=phone_number&app_absent=0" target="_blank" rel="noopener">Agendar reunión</a>
-            <a class="btn wine" href="cursos.html">Ver cursos</a>
-          </div>
-
-          <div class="pill-row">
-            <span class="mini-pill">Diagnóstico</span>
-            <span class="mini-pill wine">Implementación</span>
-            <span class="mini-pill">Medición</span>
-          </div>
-
-          <!-- STATS (se quedan en el hero) -->
-          <div class="stats" aria-label="Resumen de enfoque">
-            <div class="stat-note">
-              <div class="note-kicker">Estructura simple</div>
-              <p class="note-text">
-                Para decisiones reales: lo que se define se implementa y se mide.
-              </p>
-              <div class="note-chips">
-                <span class="note-chip">Claridad</span>
-                <span class="note-chip wine">Ejecución</span>
-                <span class="note-chip">Medición</span>
-              </div>
-            </div>
-
-            <div class="stat teal">
-              <div class="stat-top">
-                <div class="stat-ico">⌁</div>
-                <div class="stat-pill">Ruta</div>
-              </div>
-              <div class="stat-main">
-                <b>3</b>
-                <span>Fases</span>
-              </div>
-              <div class="stat-meter teal"></div>
-            </div>
-
-            <div class="stat wine">
-              <div class="stat-top">
-                <div class="stat-ico">✦</div>
-                <div class="stat-pill">Marco</div>
-              </div>
-              <div class="stat-main">
-                <b>2</b>
-                <span>Marcos (DEI + ODS)</span>
-              </div>
-              <div class="stat-meter wine"></div>
-            </div>
-
-            <div class="stat teal">
-              <div class="stat-top">
-                <div class="stat-ico">▦</div>
-                <div class="stat-pill">Sostener</div>
-              </div>
-              <div class="stat-main">
-                <b>1</b>
-                <span>Ruta sostenible</span>
-              </div>
-              <div class="stat-meter teal"></div>
-            </div>
-          </div>
-          <!-- /STATS -->
+          <p class="sub" style="margin-top: 12px;">
+            Cada proceso se diseña de manera confidencial, contextualizada y basada en evidencia, priorizando soluciones claras, viables y sostenibles para la organización.
+          </p>
         </div>
       </div>
     </div>
@@ -1221,132 +1156,97 @@
         <div>
           <div class="badge"><span class="dot" aria-hidden="true"></span> LÍNEAS DE CONSULTORÍA</div>
           <div class="section-title">Líneas de consultoría</div>
-          <p class="section-desc">
-            Ofrecemos consultoría especializada en políticas, marcos institucionales, normas y cumplimiento, enfoque estratégico y transformación cultural, y alineación con sostenibilidad y ESG.
-          </p>
-        </div>
-
-        <div class="section-actions">
-          <a class="btn ghost" href="#fit">Ver qué obtienes</a>
-          <a class="btn primary" href="https://api.whatsapp.com/send/?phone=%2B525578634127&text&type=phone_number&app_absent=0" target="_blank" rel="noopener">Conectar</a>
         </div>
       </div>
 
 
-      <div class="glass-card">
-        <h2>Nuestro enfoque fortalece</h2>
-        <p>
-          La cultura organizacional y el clima laboral, el cumplimiento normativo y la prevención de riesgos, y el impacto social positivo en comunidades y grupos de interés vinculados a las organizaciones.
-        </p>
-        <p style="margin-top: 16px; font-style: italic;">
-          Creemos que cuando una persona transforma su mirada, esa transformación se multiplica en su equipo, su organización y su comunidad.
-        </p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Qué obtienes + Para quién es -->
-  <section id="fit">
-    <!-- Fondo de sección - Puedes cambiar el estilo aquí -->
-    <div class="section-bg section-bg-color"></div>
-    <div class="wrap">
-      <div class="two-col">
-        <div class="glass-card">
-          <h2>Qué obtienes</h2>
-          <ul class="bullets">
-            <li>Claridad de prioridades y alcance</li>
-            <li>Entregables accionables (no solo PDFs)</li>
-            <li>Dueños por iniciativa y plan por fases</li>
-            <li>Métricas y cadencia de seguimiento</li>
-          </ul>
-        </div>
-
-        <div class="glass-card">
-          <h2>Para quién es</h2>
-          <ul class="bullets">
-            <li>Equipos que quieren estructura y ejecución real</li>
-            <li>Empresas que necesitan ordenar iniciativas DEI/ODS</li>
-            <li>Líderes que requieren indicadores y gobierno</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Por qué funciona -->
-  <section id="why">
-    <!-- Fondo de sección - Puedes cambiar el estilo aquí -->
-    <div class="section-bg section-bg-color"></div>
-    <div class="wrap">
-      <div class="section-head">
-        <div>
-          <div class="badge"><span class="dot" aria-hidden="true"></span> NUESTRA PROPUESTA DE VALOR</div>
-          <div class="section-title">Nuestra propuesta de valor</div>
-          <p class="section-desc">
-            Ofrecemos servicios profesionales realizados con pasión y propósito, con rigurosidad técnica y alineación normativa.
-          </p>
-        </div>
-      </div>
-
-      <div class="two-col">
-        <div class="glass-card">
-          <h2>Nuestra propuesta de valor</h2>
-          <ul class="bullets">
-            <li>☑ Rigurosidad técnica y alineación normativa</li>
-            <li>☑ Enfoque estratégico transversal</li>
-            <li>☑ Implementación práctica y contextualizada</li>
-            <li>☑ Trabajo colaborativo e interdisciplinario</li>
-            <li>☑ Impacto organizacional y comunitario</li>
-            <li>☑ Servicio profesional realizado con pasión y propósito</li>
-          </ul>
-        </div>
-
-        <div class="glass-card" style="padding:0; overflow:hidden;">
-          <div style="
-            min-height: 360px;
-            background-image:url('https://images.unsplash.com/photo-1556761175-4b46a572b786?auto=format&fit=crop&w=1600&q=70');
-            background-size:cover;
-            background-position:center;
-            filter:saturate(.92) contrast(1.02) brightness(.92);
-            position:relative;">
-            <div style="position:absolute; inset:0; background:
-              radial-gradient(520px 320px at 20% 20%, rgba(18,77,68,.22), transparent 62%),
-              radial-gradient(520px 320px at 88% 10%, rgba(133,47,52,.18), transparent 62%),
-              linear-gradient(180deg, rgba(0,0,0,.10), rgba(0,0,0,.55));
-            "></div>
+      <div class="service-grid" style="margin-top: 18px;">
+        <article class="service-card">
+          <div class="service-row">
+            <div class="service-left">
+              <div class="service-top">
+                <div class="service-icon teal" aria-hidden="true">📋</div>
+                <div class="service-tag"><span class="dot" aria-hidden="true"></span> políticas</div>
+              </div>
+              <h3 class="service-title">Políticas y marcos institucionales</h3>
+              <p class="service-text">
+                Diseño, actualización e implementación de:
+              </p>
+              <ul style="margin: 12px 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 14px;">
+                <li>Códigos de ética y conducta</li>
+                <li>Políticas de igualdad, DEI y no discriminación</li>
+                <li>Protocolos de prevención y atención de acoso y hostigamiento sexual y laboral</li>
+                <li>Sistemas de atención, acompañamiento y resolución de casos</li>
+              </ul>
+            </div>
+            <div class="service-right" aria-hidden="true">
+              <div class="service-img" style="background-image:url('https://images.unsplash.com/photo-1556761175-4b46a572b786?auto=format&fit=crop&w=1200&q=70');"></div>
+            </div>
           </div>
-        </div>
-      </div>
-    </div>
-  </section>
+        </article>
 
-  <!-- Testimonios -->
-  <section id="words">
-    <!-- Fondo de sección - Puedes cambiar el estilo aquí -->
-    <div class="section-bg section-bg-color"></div>
-    <div class="wrap">
-      <div class="section-head">
-        <div>
-          <div class="badge"><span class="dot" aria-hidden="true"></span> VOCES</div>
-          <div class="section-title">Feedback de equipos</div>
-          <p class="section-desc">Sección lista para colocar testimonios cuando los tengan (misma estética del template).</p>
-        </div>
+        <article class="service-card">
+          <div class="service-row">
+            <div class="service-left">
+              <div class="service-top">
+                <div class="service-icon wine" aria-hidden="true">✓</div>
+                <div class="service-tag wine"><span class="dot" aria-hidden="true"></span> cumplimiento</div>
+              </div>
+              <h3 class="service-title">Normas y cumplimiento</h3>
+              <ul style="margin: 12px 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 14px;">
+                <li>Acompañamiento para la implementación y certificación de la NMX-R-025-SCFI-2015 — Igualdad Laboral y No Discriminación</li>
+                <li>Implementación y cumplimiento de la NOM-035 — Riesgos psicosociales</li>
+                <li>Integración de indicadores, evidencias y mecanismos de seguimiento</li>
+                <li>Alineación con estándares nacionales e internacionales en materia de sostenibilidad, ESG, DEI y derechos humanos.</li>
+              </ul>
+            </div>
+            <div class="service-right" aria-hidden="true">
+              <div class="service-img" style="background-image:url('https://images.unsplash.com/photo-1552664730-d307ca884978?auto=format&fit=crop&w=1200&q=70');"></div>
+            </div>
+          </div>
+        </article>
+
+        <article class="service-card">
+          <div class="service-row">
+            <div class="service-left">
+              <div class="service-top">
+                <div class="service-icon teal" aria-hidden="true">🎯</div>
+                <div class="service-tag"><span class="dot" aria-hidden="true"></span> transformación</div>
+              </div>
+              <h3 class="service-title">Enfoque estratégico y transformación cultural</h3>
+              <ul style="margin: 12px 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 14px;">
+                <li>Integración transversal del enfoque DEI y derechos humanos</li>
+                <li>Estrategias de cambio cultural y liderazgo inclusivo</li>
+                <li>Diseño de indicadores, diagnósticos y planes de acción</li>
+              </ul>
+            </div>
+            <div class="service-right" aria-hidden="true">
+              <div class="service-img" style="background-image:url('https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&w=1200&q=70');"></div>
+            </div>
+          </div>
+        </article>
+
+        <article class="service-card">
+          <div class="service-row">
+            <div class="service-left">
+              <div class="service-top">
+                <div class="service-icon wine" aria-hidden="true">🌱</div>
+                <div class="service-tag wine"><span class="dot" aria-hidden="true"></span> sostenibilidad</div>
+              </div>
+              <h3 class="service-title">Alineación con sostenibilidad y ESG</h3>
+              <ul style="margin: 12px 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 14px;">
+                <li>Inclusión, igualdad y derechos humanos en estrategias de sostenibilidad</li>
+                <li>Trabajo con grupos de interés y comunidades vinculadas</li>
+                <li>Fortalecimiento de programas de Community Engagement</li>
+              </ul>
+            </div>
+            <div class="service-right" aria-hidden="true">
+              <div class="service-img" style="background-image:url('https://images.unsplash.com/photo-1556761175-4b46a572b786?auto=format&fit=crop&w=1200&q=70');"></div>
+            </div>
+          </div>
+        </article>
       </div>
 
-      <div class="test-grid">
-        <div class="quote">
-          <small>Testimonio 01</small>
-          <p>“Aterrizamos prioridades y salimos con un plan claro para ejecutar y medir.”</p>
-        </div>
-        <div class="quote">
-          <small>Testimonio 02</small>
-          <p>“Lo valioso fue el seguimiento: responsables, cadencia y mejora continua.”</p>
-        </div>
-        <div class="quote">
-          <small>Testimonio 03</small>
-          <p>“Menos discurso, más estructura. Se nota en cómo decide el equipo.”</p>
-        </div>
-      </div>
     </div>
   </section>
 
@@ -1357,12 +1257,11 @@
     <div class="wrap">
       <div class="big-cta">
         <div>
-          <h2>TRABAJEMOS<br/>JUNTOS</h2>
-          <p>Si tiene sentido, lo vemos en una llamada breve: contexto, prioridades y próximos pasos.</p>
+          <h2>Conversemos por WhatsApp sobre las necesidades de tu organización</h2>
         </div>
 
         <div style="display:flex; gap:12px; flex-wrap:wrap;">
-          <a class="btn primary" href="https://api.whatsapp.com/send/?phone=%2B525578634127&text&type=phone_number&app_absent=0" target="_blank" rel="noopener">Escribir por WhatsApp</a>
+          <a class="btn primary" href="https://wa.link/4wxidx" target="_blank" rel="noopener">Escribir por WhatsApp</a>
           <a class="btn ghost" href="index.html">Volver al inicio</a>
         </div>
       </div>
@@ -1405,7 +1304,7 @@
             Instagram
           </a>
 
-          <a class="teal" href="https://api.whatsapp.com/send/?phone=%2B525578634127&text&type=phone_number&app_absent=0" target="_blank" rel="noopener">
+          <a class="teal" href="https://wa.link/4wxidx" target="_blank" rel="noopener">
             <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
               <path d="M20 12a8 8 0 0 1-11.7 7L4 20l1-4.2A8 8 0 1 1 20 12Z" stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
               <path d="M9.4 9.2c.3-.3.8-.3 1.1 0l.7.7c.3.3.3.8 0 1.1l-.4.4c.7 1.2 1.7 2.2 2.9 2.9l.4-.4c.3-.3.8-.3 1.1 0l.7.7c.3.3.3.8 0 1.1l-.4.4c-.5.5-1.2.7-1.9.6-3.7-.7-6.7-3.7-7.4-7.4-.1-.7.1-1.4.6-1.9l.4-.4Z" stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
