--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       --wine:#B85A6B;    /* vino más rosado y suave */
       --wine-light:#D87A8F; /* vino rosado pastel */
       --rose:#E8C5CA;    /* rosa suave para acentos */
+      
       --rose-light:#F5E1E5; /* rosa muy suave */
       --olive:#7A8B77;   /* oliva más suave */
       --g1:#9A9A9A;      /* gris más suave */
@@ -979,7 +980,7 @@
             </svg>
           </div>
 
-          <a class="btn primary" href="consultoria.html">
+          <a class="btn primary" href="https://wa.link/i1v7h6" target="_blank" rel="noopener">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
               <path d="M6.5 3.5 9 6c.5.5.6 1.2.2 1.8L8 9.5c1.1 2.2 2.9 4 5.1 5.1l1.7-1.2c.6-.4 1.3-.3 1.8.2l2.5 2.5c.6.6.6 1.6 0 2.2l-1.4 1.4c-.6.6-1.4.9-2.3.8-9.1-1.1-16-8-17.1-17.1-.1-.9.2-1.7.8-2.3L4.3 3.5c.6-.6 1.6-.6 2.2 0Z" stroke="rgba(251,251,251,.88)" stroke-width="2" stroke-linejoin="round"/>
             </svg>
@@ -1010,27 +1011,14 @@
     <div class="wrap">
       <div class="hero-inner">
         <div>
-          <div class="kicker">
-            <span class="dot" aria-hidden="true"></span>
-            ESTRATEGIA REAL, EJECUCIÓN FINA
-          </div>
-
           <h1>ELVIRA<br/>STRATEGY</h1>
 
           <p class="sub">
-            Acompañamos a empresas, organizaciones y comunidades a construir espacios más inclusivos, seguros y dignos — dentro y fuera del trabajo. Lo hacemos a través de capacitación estratégica, consultoría técnica especializada y procesos de sensibilización con impacto organizacional y social.
+            Acompañamos a empresas, organizaciones y comunidades a construir espacios más inclusivos, seguros y dignos — dentro y fuera del trabajo.
           </p>
-
-          <div class="hero-actions">
-            <a class="btn primary" href="consultoria.html">Ver consultoría</a>
-            <a class="btn wine" href="cursos.html">Explorar cursos</a>
-          </div>
-
-          <div class="pill-row">
-            <span class="mini-pill">Estrategia</span>
-            <span class="mini-pill wine">Implementación</span>
-            <span class="mini-pill">Medición</span>
-          </div>
+          <p class="sub" style="margin-top: 12px;">
+            Lo hacemos a través de capacitación estratégica, consultoría técnica especializada y procesos de sensibilización con impacto organizacional y social.
+          </p>
         </div>
       </div>
     </div>
@@ -1056,32 +1044,6 @@
             <p class="who-text">
               Esa combinación nos permite generar soluciones sólidas, sensibles al contexto y con impacto real — alineadas a los objetivos organizacionales y al cumplimiento de estándares nacionales e internacionales.
             </p>
-
-            <div class="who-list">
-              <div class="who-item">
-                <div class="who-icon teal">⌁</div>
-                <div>
-                  <b>Research / diagnóstico</b>
-                  <p>Contexto, riesgos, brechas y prioridades. Qué mover primero y qué medir desde el día uno.</p>
-                </div>
-              </div>
-
-              <div class="who-item">
-                <div class="who-icon wine">✦</div>
-                <div>
-                  <b>Estructura accionable</b>
-                  <p>Intención → operación: procesos, responsables, tiempos y entregables claros.</p>
-                </div>
-              </div>
-
-              <div class="who-item">
-                <div class="who-icon teal">⟡</div>
-                <div>
-                  <b>Seguimiento real</b>
-                  <p>Indicadores, reportes ejecutivos y ajustes continuos para sostener resultados.</p>
-                </div>
-              </div>
-            </div>
           </div>
 
           <div class="who-right" aria-hidden="true">
@@ -1096,18 +1058,65 @@
     <!-- Fondo de sección - Puedes cambiar el estilo aquí -->
     <div class="section-bg section-bg-color"></div>
     <div class="wrap">
-      <div class="section-head">
+          <div class="section-head">
         <div>
           <div class="badge"><span class="dot" aria-hidden="true"></span> QUÉ HACEMOS</div>
           <div class="section-title">Qué hacemos</div>
           <p class="section-desc">
-            Trabajamos junto con áreas de Recursos Humanos y Desarrollo Organizacional, Diversidad, Equidad e Inclusión (DEI), Sostenibilidad / ESG, Cumplimiento y Gobierno Corporativo, Responsabilidad Social, Community Engagement y Relación con Comunidades.
+            Trabajamos junto con áreas de:
           </p>
+          <ul style="margin: 12px 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 15px;">
+            <li>Recursos Humanos y Desarrollo Organizacional</li>
+            <li>Diversidad, Equidad e Inclusión (DEI)</li>
+            <li>Sostenibilidad / ESG</li>
+            <li>Cumplimiento y Gobierno Corporativo</li>
+            <li>Responsabilidad Social</li>
+            <li>Community Engagement y Relación con Comunidades</li>
+          </ul>
+          <p class="section-desc" style="margin-top: 12px;">
+            Para diseñar e implementar:
+          </p>
+          <ul style="margin: 12px 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 15px;">
+            <li>Programas de capacitación y sensibilización</li>
+            <li>Políticas, protocolos y marcos institucionales</li>
+            <li>Estrategias de inclusión, igualdad y prevención de violencias</li>
+            <li>Procesos comunitarios con enfoque de derechos humanos, igualdad y no discriminación</li>
+          </ul>
+          <p class="section-desc" style="margin-top: 12px;">
+            Nuestro enfoque fortalece:
+          </p>
+          <ul style="margin: 12px 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 15px;">
+            <li>La cultura organizacional y el clima laboral</li>
+            <li>El cumplimiento normativo y la prevención de riesgos</li>
+            <li>El impacto social positivo en comunidades y grupos de interés vinculados a las organizaciones.</li>
+          </ul>
         </div>
 
         <div class="section-actions">
           <a class="btn ghost" href="consultoria.html">Ver consultoría completa</a>
-          <a class="btn primary" href="consultoria.html">Hablemos</a>
+          <a class="btn primary" href="https://wa.link/i1v7h6" target="_blank" rel="noopener">Hablemos</a>
+        </div>
+      </div>
+
+      <!-- MENSAJE DE CIERRE / VISIÓN -->
+      <div class="wrap" style="margin-top: 32px;">
+        <div class="glass-card" style="text-align: center; padding: 40px 32px;">
+          <p style="font-size: clamp(20px, 2.5vw, 28px); line-height: 1.4; margin: 0; color: rgba(45,45,45,.85); font-style: italic;">
+            Creemos que cuando una persona transforma su mirada, esa transformación se multiplica en su equipo, su organización y su comunidad.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- PROPUESTA DE VALOR -->
+  <section id="propuesta">
+    <div class="section-bg section-bg-color"></div>
+    <div class="wrap">
+      <div class="section-head">
+        <div>
+          <div class="badge"><span class="dot" aria-hidden="true"></span> NUESTRA PROPUESTA DE VALOR</div>
+          <div class="section-title">Nuestra propuesta de valor</div>
         </div>
       </div>
 
@@ -1116,30 +1125,13 @@
           <div class="service-row">
             <div class="service-left">
               <div class="service-top">
-                <div class="service-icon teal" aria-hidden="true">✦</div>
-                <div class="service-tag"><span class="dot" aria-hidden="true"></span> claridad</div>
+                <div class="service-icon teal" aria-hidden="true">✓</div>
+                <div class="service-tag"><span class="dot" aria-hidden="true"></span> rigurosidad</div>
               </div>
-
-              <h3 class="service-title">Programas de capacitación y sensibilización</h3>
-              <p class="service-text">
-                Diseñamos programas de capacitación y sensibilización estratégicos para organizaciones y comunidades.
-              </p>
-
-              <div class="chip-row">
-                <span class="chip">Capacitación</span>
-                <span class="chip">Sensibilización</span>
-                <span class="chip wine">Impacto organizacional</span>
-              </div>
+              <h3 class="service-title">Rigurosidad técnica y alineación normativa</h3>
             </div>
-
             <div class="service-right" aria-hidden="true">
-              <div class="service-img" style="background-image:url('https://images.unsplash.com/photo-1553877522-43269d4ea984?auto=format&fit=crop&w=1200&q=70');"></div>
-              <div class="service-fab" title="Ver detalle">
-                <svg viewBox="0 0 24 24" fill="none">
-                  <path d="M7 17 17 7" stroke="rgba(251,251,251,.92)" stroke-width="2" stroke-linecap="round"/>
-                  <path d="M10 7h7v7" stroke="rgba(251,251,251,.92)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-              </div>
+              <div class="service-img" style="background-image:url('https://images.unsplash.com/photo-1556761175-4b46a572b786?auto=format&fit=crop&w=1200&q=70');"></div>
             </div>
           </div>
         </article>
@@ -1148,30 +1140,13 @@
           <div class="service-row">
             <div class="service-left">
               <div class="service-top">
-                <div class="service-icon wine" aria-hidden="true">≡</div>
-                <div class="service-tag wine"><span class="dot" aria-hidden="true"></span> estructura</div>
+                <div class="service-icon wine" aria-hidden="true">✓</div>
+                <div class="service-tag wine"><span class="dot" aria-hidden="true"></span> estrategia</div>
               </div>
-
-              <h3 class="service-title">Políticas, protocolos y marcos institucionales</h3>
-              <p class="service-text">
-                Diseñamos e implementamos políticas, protocolos y marcos institucionales con enfoque de derechos humanos e inclusión.
-              </p>
-
-              <div class="chip-row">
-                <span class="chip">Políticas</span>
-                <span class="chip wine">Protocolos</span>
-                <span class="chip">Marcos institucionales</span>
-              </div>
+              <h3 class="service-title">Enfoque estratégico transversal</h3>
             </div>
-
             <div class="service-right" aria-hidden="true">
               <div class="service-img" style="background-image:url('https://images.unsplash.com/photo-1552664730-d307ca884978?auto=format&fit=crop&w=1200&q=70');"></div>
-              <div class="service-fab wine" title="Ver detalle">
-                <svg viewBox="0 0 24 24" fill="none">
-                  <path d="M7 17 17 7" stroke="rgba(251,251,251,.92)" stroke-width="2" stroke-linecap="round"/>
-                  <path d="M10 7h7v7" stroke="rgba(251,251,251,.92)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-              </div>
             </div>
           </div>
         </article>
@@ -1180,33 +1155,113 @@
           <div class="service-row">
             <div class="service-left">
               <div class="service-top">
-                <div class="service-icon teal" aria-hidden="true">▦</div>
-                <div class="service-tag"><span class="dot" aria-hidden="true"></span> medición</div>
+                <div class="service-icon teal" aria-hidden="true">✓</div>
+                <div class="service-tag"><span class="dot" aria-hidden="true"></span> implementación</div>
               </div>
-
-              <h3 class="service-title">Estrategias de inclusión, igualdad y prevención de violencias</h3>
-              <p class="service-text">
-                Desarrollamos estrategias de inclusión, igualdad y prevención de violencias, así como procesos comunitarios con enfoque de derechos humanos, igualdad y no discriminación.
-              </p>
-
-              <div class="chip-row">
-                <span class="chip wine">Inclusión</span>
-                <span class="chip">Igualdad</span>
-                <span class="chip">Prevención de violencias</span>
-              </div>
+              <h3 class="service-title">Implementación práctica y contextualizada</h3>
             </div>
-
             <div class="service-right" aria-hidden="true">
               <div class="service-img" style="background-image:url('https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&w=1200&q=70');"></div>
-              <div class="service-fab" title="Ver detalle">
-                <svg viewBox="0 0 24 24" fill="none">
-                  <path d="M7 17 17 7" stroke="rgba(251,251,251,.92)" stroke-width="2" stroke-linecap="round"/>
-                  <path d="M10 7h7v7" stroke="rgba(251,251,251,.92)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-              </div>
             </div>
           </div>
         </article>
+
+        <article class="service-card">
+          <div class="service-row">
+            <div class="service-left">
+              <div class="service-top">
+                <div class="service-icon wine" aria-hidden="true">✓</div>
+                <div class="service-tag wine"><span class="dot" aria-hidden="true"></span> colaboración</div>
+              </div>
+              <h3 class="service-title">Trabajo colaborativo e interdisciplinario</h3>
+            </div>
+            <div class="service-right" aria-hidden="true">
+              <div class="service-img" style="background-image:url('https://images.unsplash.com/photo-1556761175-4b46a572b786?auto=format&fit=crop&w=1200&q=70');"></div>
+            </div>
+          </div>
+        </article>
+
+        <article class="service-card">
+          <div class="service-row">
+            <div class="service-left">
+              <div class="service-top">
+                <div class="service-icon teal" aria-hidden="true">✓</div>
+                <div class="service-tag"><span class="dot" aria-hidden="true"></span> impacto</div>
+              </div>
+              <h3 class="service-title">Impacto organizacional y comunitario</h3>
+            </div>
+            <div class="service-right" aria-hidden="true">
+              <div class="service-img" style="background-image:url('https://images.unsplash.com/photo-1552664730-d307ca884978?auto=format&fit=crop&w=1200&q=70');"></div>
+            </div>
+          </div>
+        </article>
+
+        <article class="service-card">
+          <div class="service-row">
+            <div class="service-left">
+              <div class="service-top">
+                <div class="service-icon wine" aria-hidden="true">✓</div>
+                <div class="service-tag wine"><span class="dot" aria-hidden="true"></span> pasión</div>
+              </div>
+              <h3 class="service-title">Servicio profesional realizado con pasión y propósito</h3>
+            </div>
+            <div class="service-right" aria-hidden="true">
+              <div class="service-img" style="background-image:url('https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&w=1200&q=70');"></div>
+            </div>
+          </div>
+        </article>
+      </div>
+    </div>
+  </section>
+
+  <!-- COLABORACIONES ESPECIALIZADAS -->
+  <section id="colaboraciones">
+    <div class="section-bg section-bg-color"></div>
+    <div class="wrap">
+      <div class="section-head">
+        <div>
+          <div class="badge"><span class="dot" aria-hidden="true"></span> COLABORACIONES</div>
+          <div class="section-title">Colaboraciones especializadas</div>
+          <p class="section-desc">
+            Contamos con una red de especialistas en:
+          </p>
+          <ul style="margin: 12px 0; padding-left: 20px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 15px;">
+            <li>Derecho laboral y derechos humanos</li>
+            <li>ESG y sostenibilidad</li>
+            <li>Igualdad laboral y DEI</li>
+            <li>Interculturalidad y no discriminación</li>
+            <li>Accesibilidad y diseño universal</li>
+            <li>Bienestar psicosocial y riesgos psicosociales</li>
+            <li>Gestión de riesgos y cumplimiento normativo</li>
+          </ul>
+          <p class="section-desc" style="margin-top: 12px;">
+            Esto nos permite ofrecer soluciones integrales, técnicas y de alto impacto.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- CURSOS ABIERTOS AL PÚBLICO -->
+  <section id="cursos-publico">
+    <div class="section-bg section-bg-color"></div>
+    <div class="wrap">
+      <div class="who-wrap">
+        <div class="who-inner">
+          <div class="who-left">
+            <div class="who-kicker"><span class="who-dot"></span> CURSOS Y PROGRAMAS</div>
+            <h2 class="who-title">Además de trabajar con organizaciones, contamos con cursos y programas abiertos al público</h2>
+            <p class="who-text">
+              Te invitamos a consultar nuestra sección de Cursos y Próximas Fechas.
+            </p>
+            <div class="hero-actions" style="justify-content: flex-start; margin-top: 18px;">
+              <a class="btn primary" href="cursos.html">Ver cursos</a>
+            </div>
+          </div>
+          <div class="who-right" aria-hidden="true">
+            <div class="who-photo" style="background-image: url('./assets/Imagenes/Hero_cursos.jpg');"></div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -1247,7 +1302,7 @@
             Instagram
           </a>
 
-          <a class="teal" href="https://api.whatsapp.com/send/?phone=%2B525578634127&text&type=phone_number&app_absent=0" target="_blank" rel="noopener">
+          <a class="teal" href="https://wa.link/i1v7h6" target="_blank" rel="noopener">
             <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
               <path d="M20 12a8 8 0 0 1-11.7 7L4 20l1-4.2A8 8 0 1 1 20 12Z" stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
               <path d="M9.4 9.2c.3-.3.8-.3 1.1 0l.7.7c.3.3.3.8 0 1.1l-.4.4c.7 1.2 1.7 2.2 2.9 2.9l.4-.4c.3-.3.8-.3 1.1 0l.7.7c.3.3.3.8 0 1.1l-.4.4c-.5.5-1.2.7-1.9.6-3.7-.7-6.7-3.7-7.4-7.4-.1-.7.1-1.4.6-1.9l.4-.4Z" stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
